[metadata]
name = tsa
author = Hannes Breytenbach
author_email = hannes@saao.ac.za
description = Time Series Analysis Tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/astromancer/tsa
project_urls =
    Bug Tracker = https://github.com/astromancer/tsa/issues
classifiers = 
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Visualization 


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
setup_requires =
  setuptools_scm


[options.packages.find]
where = src